06-Ingress/food-video-wear/webapp-video.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webapp-video
  name: webapp-video
  namespace: ravi-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-video
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp-video
    spec:
      containers:
      - image: kodekloud/ecommerce:video
        name: ecommerce
        resources: {}
status: {}
