06-Ingress/food-video-wear/webapp-food-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp-food
  name: webapp-food-svc
  namespace: ravi-ingress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-food
  type: ClusterIP
status:
  loadBalancer: {}
