06-Ingress/food-video-wear/online-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: online-shop-ingress
  namespace: ravi-ingress
  annotations:
     #Mandatory annotations to make the ingress work
     nginx.ingress.kubernetes.io/rewrite-traget: /
     nginx.ingress.kubernetes.io/ssl-redirect: “false”

spec:
  ingressClassName: nginx-example
  rules:
  - host: ravi.labs.kodekloud.com
    http:
      paths:
      - backend:
          service:
            name: webapp-food-svc
            port:
              number: 8080
        path: /food
        pathType: Exact
      - backend:
          service:
            name: webapp-video-svc
            port:
              number: 8080
        path: /stream
        pathType: Exact
      - backend:
          service:
            name: webapp-wear-svc
            port:
              number: 8080
        path: /wear
        pathType: Exact
status:
  loadBalancer: {}
